--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "mr-project--fiverr-system-backend",
   "module": "index.ts",
   "type": "module",
-  "scripts": { 
-    "dev" : "bun --watch run src/server.js"
+  "scripts": {
+    "dev": "bun --watch run ./src/server.js"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@types/cors": "^2.8.17",
+    "@types/nodemailer": "^6.4.15",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "http-status": "^1.7.4",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.14",
     "prisma": "^5.18.0"
   }
 }
