--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch run ./src/server.js"
+    "dev": "bun --watch run ./src/server.js",
+    "build" : "tsc"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -25,6 +26,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "tsc": "^2.0.4"
   }
 }
