--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://soum-ik:frontenddev@cluster0.dunrodk.mongodb.net/mkfiver?retryWrites=true&w=majority&appName=Cluster0"
+# DATABASE_URL="mongodb+srv://soumik:backend@spi-backend.uvsm3ok.mongodb.net/?retryWrites=true&w=majority&appName=SPI-backend"
+DATABASE_URL="mongodb+srv://backendnode:backendnode@backend.ijeqg.mongodb.net/mr-project?retryWrites=true&w=majority&appName=backend"
