--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "module": "server.ts",
   "type": "module",
   "scripts": {
-    "start": "bun --watch run ./src/server.js",
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn --rs --transpile-only src/server.js"
+    "dev": "bun --watch run ./src/server.js",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/bun": "latest",
