--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "module": "server.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --watch run ./src/server.js",
-    "build": "tsc"
+    "dev": "bun --watch run ./dist/app.js",
+    "build": "rimraf dist && tsc",
+    "start": " bun --watch run ./src/app.js"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
@@ -27,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
+    "serverless-http": "^3.2.0",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
     "zod": "^3.23.8"
