--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
     "serverless-http": "^3.2.0",
+    "socket.io": "^4.7.5",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
     "zod": "^3.23.8"
