--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun --watch run ./dist/app.js",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc && prisma generate",
     "start": " bun --watch run ./src/app.js"
   },
   "devDependencies": {
