--- a/.env
+++ b/.env
@@ -5,6 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="mongodb+srv://soumik:backend@spi-backend.uvsm3ok.mongodb.net/?retryWrites=true&w=majority&appName=SPI-backend"
-# DATABASE_URL="mongodb+srv://backendnode:backendnode@backend.ijeqg.mongodb.net/mr-project?retryWrites=true&w=majority&appName=backend"
-DATABASE_URL="mongodb+srv://mrproject321:mrproject321@backend.e1nef.mongodb.net/backend?retryWrites=true&w=majority&appName=Backend"
+
+#development url for mongodb
+DATABASE_URL="mongodb+srv://backendnode:backendnode@backend.ijeqg.mongodb.net/mr-project?retryWrites=true&w=majority&appName=backend"
+
+#production url for mongodb
+# DATABASE_URL="mongodb+srv://mrproject321:mrproject321@backend.e1nef.mongodb.net/backend?retryWrites=true&w=majority&appName=Backend"
 # mrproject321
