[update] image upload wtih cloudinary

--- a/.env
+++ b/.env
@@ -12,3 +12,8 @@ DATABASE_URL="mongodb+srv://backendnode:backendnode@backend.ijeqg.mongodb.net/mr
 #production url for mongodb
 # DATABASE_URL="mongodb+srv://mrproject321:mrproject321@backend.e1nef.mongodb.net/backend?retryWrites=true&w=majority&appName=Backend"
 # mrproject321
+
+
+CLOUDINARY_CLOUD_NAME=degb68ubr
+CLOUDINARY_API_KEY=275858911563355
+CLOUDINARY_API_SECRET=W5FDPW-uRKD5_Tm_RwoWsEgPMWc
