--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/bun": "latest",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.12",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2"
   },
@@ -22,12 +23,14 @@
     "@types/cors": "^2.8.17",
     "@types/nodemailer": "^6.4.15",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
     "serverless-http": "^3.2.0",
