--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.12",
     "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typedoc": "^0.26.7"
   },
   "peerDependencies": {
     "typescript": "^5.5.4"
