--- a/.env
+++ b/.env
@@ -17,3 +17,8 @@ DATABASE_URL="mongodb+srv://backendnode:backendnode@backend.ijeqg.mongodb.net/mr
 CLOUDINARY_CLOUD_NAME=degb68ubr
 CLOUDINARY_API_KEY=275858911563355
 CLOUDINARY_API_SECRET=W5FDPW-uRKD5_Tm_RwoWsEgPMWc
+
+AWS_ACCESS_KEY_ID=your_access_key
+AWS_SECRET_ACCESS_KEY=your_secret_key
+AWS_REGION=your_region
+AWS_BUCKET_NAME=your_bucket_name
