--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
     "@types/nodemailer": "^6.4.15",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
     "colors": "^1.4.0",
