--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typedoc": "^0.26.7"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.665.0",
     "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
     "@types/nodemailer": "^6.4.15",
