--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "mr-project--fiverr-system-backend",
-  "module": "server.ts",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.ts",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
-    "dev": "bun --watch run ./src/app.js",
+    "dev": "bun --watch run ./src/server.ts",
     "build": "tsc",
-    "start": " bun --watch run ./src/app.js"
+    "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "start": " bun --watch run ./src/server.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.2",
     "typedoc": "^0.26.7"
   },
   "dependencies": {
@@ -28,19 +36,19 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
     "serverless-http": "^3.2.0",
     "socket.io": "^4.7.5",
     "stripe": "^17.1.0",
-    "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
-    "typescript": "^5.5.4",
     "zod": "^3.23.8"
   }
 }
