--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
+    "@types/uuid": "^10.0.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2",
-    "typedoc": "^0.26.7"
+    "typedoc": "^0.26.7",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.665.0",
@@ -39,6 +40,7 @@
     "express-rate-limit": "^7.4.1",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
+    "jimp-watermark": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
@@ -46,9 +48,11 @@
     "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
     "serverless-http": "^3.2.0",
+    "sharp": "^0.33.5",
     "socket.io": "^4.7.5",
     "stripe": "^17.1.0",
     "tsc": "^2.0.4",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   }
 }
