--- a/package.json
+++ b/package.json
@@ -63,5 +63,12 @@
     "stripe": "^17.1.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
+  },
+  "lint-staged": {
+    ".{js,ts,json}": [
+      "eslint --fix --quiet",
+      "prettier --write --loglevel silent"
+    ],
+    ".prisma": "npx prisma format"
   }
 }
