--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "start": " bun --watch run ./src/server.ts",
     "prepare": "husky",
-    "migrate": "npx prisma db push"
+    "migrate": "prisma migrate dev"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
@@ -70,6 +70,6 @@
       "eslint --fix --quiet",
       "prettier --write --loglevel silent"
     ],
-    ".prisma": "npx prisma db push"
+    ".prisma": "npx prisma format"
   }
 }
