--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cloudinary": "^2.4.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "countries-list": "^3.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.1",
