--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "countries-list": "^3.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.1",
