--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ lerna-debug.log*
 .pnpm-debug.log*
 bun.lockb
 # Caches
-
+bun.lockb
 .cache
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
