--- a/.env
+++ b/.env
@@ -30,10 +30,10 @@ STRIPE_WEBHOOK_SECRET=whsec_uinOo9OzXHxCgYqjsreLmzqt5DHVncO7
 
 
 
-SMTP_HOST="email-smtp.ap-southeast-1.amazonaws.com"
+SMTP_HOST="sd-smdddp.ap-southeast-1.amazonaws.com"
 SMTP_PORT=587
-SMTP_MAIL="no-reply@fleetblox.com"
-SMTP_USER="AKIATQYYQSGOCH7D7QM7"
-SMTP_PASS="BJ78CQxg5qFeA5j4NrxVoSFxsEhsYLKPtvi3H8sAmRYE"
+SMTP_MAIL="no-reply@roblox.com"
+SMTP_USER="s3fr44r343erwewew"
+SMTP_PASS="ssfsdfsdfsrteeeee"
 # AWS SES
 
