--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.665.0",
     "@aws-sdk/client-ses": "^3.682.0",
+    "@cspotcode/source-map-support": "^0.8.1",
     "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
     "@types/node": "^22.9.0",
