--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "dev": "bun --watch run ./src/server.ts",
+    "s": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "build": "npx prisma generate && tsc",
     "start:dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "start": " bun --watch run ./src/server.ts",
